--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
     "@reactivex/rxjs": "^6.6.7",
+    "bootstrap": "^5.3.5",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
