--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@reactivex/rxjs": "^6.6.7",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
