--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "test-angular": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
